5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1800_2571.log
== TEST (2019-06-11 11:37:54) 
-- CODE:
s = input()

saida = ''

for i in range(len(string)):
	if s[i].upper != 'A'
	saida = saida + s[i]
print(saida)
-- ERROR:
File "XXXX", line 6
    if s[i].upper != 'A'
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:39:45) 
-- CODE:
s = input()

saida = ""

for i in range(len(string)):
	if s[i].lower != "a"
	saida = saida + s[i]
print(saida)
-- ERROR:
File "XXXX", line 6
    if s[i].lower != "a"
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:40:17) 
-- CODE:
s = input()

saida = ""

for i in range(len(string)):
	if s[i].lower != "a":
	saida = saida + s[i]
print(saida)
-- ERROR:
File "XXXX", line 7
    saida = saida + s[i]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:40:24) 
-- CODE:
s = input()

saida = ""

for i in range(len(string)):
	if s[i].lower != "a":
	saida = saida + s[i]
print(saida)
-- ERROR:
File "XXXX", line 7
    saida = saida + s[i]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:40:32) 
-- CODE:
s = input()

saida = ""

for i in range(len(s)):
	if s[i].lower != "a":
	saida = saida + s[i]
print(saida)
-- ERROR:
File "XXXX", line 7
    saida = saida + s[i]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:40:36) 
-- CODE:
s = input()

saida = ""

for i in range(len(s)):
	if s[i].lower != "a":
	saida = saida + s[i]
print(saida)
-- ERROR:
File "XXXX", line 7
    saida = saida + s[i]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:40:50) 
-- CODE:
s = input()

saida = ""

for i in range(len(s)):
	if s[i].lower != "a":
		saida = saida + s[i]
print(saida)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:41:21) 
-- CODE:
s = input()

saida = ""

for i in range(len(s)):
	if s[i].lower() != "a":
		saida = saida + s[i]
print(saida)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:41:28) 
-- CODE:
s = input()

saida = ""

for i in range(len(s)):
	if s[i].lower() != "a":
		saida = saida + s[i]
print(saida)
-- EXECUTION TIME:
0.728153
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
